estilos mobile  terminado

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,1 +1,7 @@
-@import './components/header.scss'
+@import './components/globales';
+@import './components/header.scss';
+@import './components/home.scss';
+@import './components/services.scss';
+@import './components/business.scss';
+@import './components/clients.scss';
+@import './components/footer.scss';
