--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -1,1 +1,456 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+main {
+  padding: 40px 10px 0;
+  max-width: 1050px;
+  margin: 0 auto;
+}
+
+main h2 {
+  font-size: 2.4rem;
+  font-weight: 500;
+  margin-left: 30px;
+  width: 325px;
+}
+
+img {
+  width: 200px;
+}
+
+.header {
+  width: 100%;
+  height: 50px;
+  padding: 10px 10px;
+}
+
+.header-logo {
+  font-size: 2.4rem;
+  font-family: "Heebo", sans-serif;
+  font-weight: 800;
+}
+
+.header-menu {
+  display: none;
+}
+
+.header-container {
+  max-width: 1050px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.burger {
+  position: absolute;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  background: none;
+  border: none;
+}
+
+.burger .burger__icon-top {
+  top: 5px;
+  position: absolute;
+  width: 30px;
+  border-radius: 5px;
+  border: 2px solid black;
+  right: 1px;
+}
+
+.burger .burger__icon-meddle {
+  top: 13px;
+  position: absolute;
+  width: 30px;
+  border-radius: 5px;
+  border: 2px solid black;
+  right: 1px;
+}
+
+.burger .burger__icon-bottom {
+  bottom: 5px;
+  position: absolute;
+  width: 30px;
+  border-radius: 5px;
+  border: 2px solid black;
+  right: 1px;
+}
+
+.home {
+  margin-bottom: 100px;
+}
+
+.home-question {
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin-left: 30px;
+  color: #2d9cdb;
+}
+
+.home-title {
+  font-size: 2.4rem;
+  width: 272px;
+  margin-left: 30px;
+}
+
+.home-img {
+  width: 100%;
+  border-radius: 18px;
+}
+
+.home-subtitle {
+  font-size: 2.4rem;
+  font-weight: 500;
+  width: 200px;
+  margin: 10px 0 15px 30px;
+}
+
+.home-parrafo {
+  font-size: 1.2rem;
+  width: 270px;
+  margin-left: 30px;
+}
+
+.home-form {
+  margin: 30px 0 30px 30px;
+  width: 291px;
+}
+
+.home-form input {
+  width: 291px;
+  height: 47px;
+  margin-top: 5px;
+  margin-right: -80px;
+  padding: 0 80px 0 20px;
+  border-radius: 10px;
+  border: none;
+  background-color: #F2F2F2;
+}
+
+.home-form button {
+  height: 39px;
+  width: 71px;
+  border: none;
+  border-radius: 10px;
+  background-color: #2d9cdb;
+}
+
+.services {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 1050px;
+}
+
+.services-design, .services-frontend, .services-backend {
+  width: 341px;
+  height: 422px;
+  margin: 40px 0;
+  padding: 50px 30px 30px;
+  border-radius: 20px;
+  -webkit-transition-property: -webkit-box-shadow;
+  transition-property: -webkit-box-shadow;
+  transition-property: box-shadow;
+  transition-property: box-shadow, -webkit-box-shadow;
+  -webkit-transition-duration: .5s;
+          transition-duration: .5s;
+}
+
+.services-design-img, .services-frontend-img, .services-backend-img {
+  width: 67px;
+}
+
+.services-design-title, .services-frontend-title, .services-backend-title {
+  font-size: 2.4rem;
+  font-weight: 700;
+  margin: 20px 0;
+}
+
+.services-design-parrafo, .services-frontend-parrafo, .services-backend-parrafo {
+  font-size: 1.6rem;
+  margin-bottom: 40px;
+}
+
+.services-design-button, .services-frontend-button, .services-backend-button {
+  width: 116px;
+  height: 42px;
+  font-size: 1.6rem;
+  border-radius: 10px;
+  border: none;
+  color: #828282;
+  background-color: #e0e0e0;
+  -webkit-transition-property: background-color, color;
+  transition-property: background-color, color;
+  -webkit-transition-duration: .5s;
+          transition-duration: .5s;
+}
+
+.services-design:hover, .services-frontend:hover, .services-backend:hover {
+  -webkit-box-shadow: 0 0 30px #c5c5c5;
+          box-shadow: 0 0 30px #c5c5c5;
+}
+
+.services-design:hover > .services-design-button, .services-frontend:hover > .services-design-button, .services-backend:hover > .services-design-button, .services-design:hover > .services-frontend-button, .services-frontend:hover > .services-frontend-button, .services-backend:hover > .services-frontend-button, .services-design:hover > .services-backend-button, .services-frontend:hover > .services-backend-button, .services-backend:hover > .services-backend-button {
+  color: white;
+  background-color: #2d9cdb;
+}
+
+.business {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.business-title {
+  margin-bottom: 50px;
+  width: 275px;
+}
+
+.business-home-img, .business-onboard-img, .business-booking-img, .business-homepage-img {
+  width: 100%;
+  max-width: 405px;
+  border-radius: 20px;
+  margin: 0 5px;
+}
+
+.business-home-parrafo, .business-onboard-parrafo, .business-booking-parrafo, .business-homepage-parrafo {
+  font-size: 1.2rem;
+  color: #828282;
+  margin-top: 10px;
+}
+
+.business-home-title, .business-onboard-title, .business-booking-title, .business-homepage-title {
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 40px;
+}
+
+.business-button {
+  background: none;
+  border: none;
+  font-size: 1.8rem;
+  font-weight: 500;
+  color: #2d9cdb;
+  margin-bottom: 30px;
+  width: 100%;
+  text-align: left;
+}
+
+.clients {
+  margin-bottom: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.clients-subtitle {
+  font-size: 1.8rem;
+  font-weight: 500;
+  color: #eb5757;
+  margin-top: 40px;
+}
+
+.clients-title {
+  margin: 0 40px 20px 0;
+  width: 280px;
+  font-size: 3.6rem;
+  font-weight: 500;
+}
+
+.clients-parrafo {
+  font-size: 1.6rem;
+  width: 273px;
+  margin-bottom: 30px;
+}
+
+.clients-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (172px)[2];
+      grid-template-columns: repeat(2, 172px);
+  -ms-grid-rows: (83px)[4];
+      grid-template-rows: repeat(4, 83px);
+  gap: 10px;
+  margin-bottom: 80px;
+}
+
+.clients-container-person1 {
+  width: 145px;
+  border-radius: 10px;
+  margin-top: 20px;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+}
+
+.clients-container-person2 {
+  width: 166px;
+  border-radius: 10px;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 3;
+  grid-row: 3;
+}
+
+.clients-container-person3 {
+  width: 166px;
+  border-radius: 10px;
+  -ms-grid-row: 2;
+  grid-row: 2;
+}
+
+.clients-subparrafo {
+  font-size: 2.4rem;
+  font-weight: 500;
+  margin-bottom: 30px;
+  max-width: 637px;
+}
+
+.clients-carlos {
+  width: 355px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.clients-carlos-img {
+  width: 80px;
+  border-radius: 10px;
+}
+
+.clients-carlos-title {
+  display: inline-block;
+  width: 200px;
+  font-size: 2.4rem;
+  margin: 0 0 0 20px;
+}
+
+.clients-carlos-parrafo {
+  display: inline-block;
+  font-size: 1.8rem;
+  width: 200px;
+  margin-left: 20px;
+  color: #828282;
+}
+
+.footer {
+  background-color: #100e1d;
+}
+
+.footer-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  max-width: 1050px;
+  margin: 0 auto;
+}
+
+.footer-navbar {
+  padding: 30px;
+}
+
+.footer-navbar li {
+  list-style: none;
+}
+
+.footer-navbar a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.8rem;
+  margin: 10px 0;
+}
+
+.footer-social {
+  margin-left: 30px;
+}
+
+.footer-social-edie {
+  font-family: "Heebo", sans-serif;
+  color: white;
+  font-size: 3.6rem;
+  font-weight: 800;
+  padding-top: 30px;
+}
+
+.footer-social img {
+  width: 24px;
+  margin-right: 5px;
+}
+
+.footer-form {
+  margin: 30px 0 30px 30px;
+  width: 291px;
+}
+
+.footer-form input {
+  width: 291px;
+  height: 47px;
+  margin-top: 5px;
+  margin-right: -80px;
+  padding: 0 80px 0 20px;
+  border-radius: 10px;
+  border: none;
+  background-color: #F2F2F2;
+}
+
+.footer-form button {
+  height: 39px;
+  width: 71px;
+  border: none;
+  border-radius: 10px;
+  background-color: #2d9cdb;
+}
+
+.footer-form label {
+  color: white;
+}
+
+.footer .etiqueta {
+  color: #BDBDBD;
+  font-size: 1.4rem;
+  width: 100%;
+  text-align: center;
+  margin-top: 100px;
+}
+
+.footer .etiqueta a {
+  font-size: 1.4rem;
+  color: #838282;
+  font-weight: 700;
+}
+/*# sourceMappingURL=style.css.map */
