--- a/src/sass/components/_clients.scss
+++ b/src/sass/components/_clients.scss
@@ -2,7 +2,7 @@
     margin-bottom: 80px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
 
     &-subtitle {
         font-size: 1.8rem;
