--- a/src/sass/components/_globales.scss
+++ b/src/sass/components/_globales.scss
@@ -11,6 +11,7 @@ $fuente2:'Heebo', sans-serif;
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 
@@ -24,6 +25,13 @@ main {
     margin-left: 30px;
     width: 325px;
   }
+}
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
 }
 
 img {
