--- a/src/sass/components/_services.scss
+++ b/src/sass/components/_services.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    max-width: 1050px;
+    justify-content: space-around;
     &-design, &-frontend, &-backend {
         width: 341px;
         height: 422px;
@@ -31,6 +31,7 @@
             border: none;
             color: #828282;
             background-color: #e0e0e0;
+            cursor: pointer;
             transition-property: background-color, color;
             transition-duration: .5s;
         }
