--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -2,19 +2,50 @@
     width: 100%;
     height: 50px;
     padding: 10px 10px;
+
     &-logo {
         font-size: 2.4rem;
         font-family: $fuente2;
         font-weight: 800;
     }
     &-menu {
-        display: none;
+        // display: none;
+        display: grid;
+        place-items: center;
+        position: fixed;
+        opacity: 0;
+        position: fixed;
+        background-color: rgba(255, 255, 255, 0.829);
+        top: -100vh;
+        left: 0;
+        height: 100vh;
+        width: 100vw;
+        transition-duration: 1s;
+        transition-property: top opacity bottom;
+        ul {
+            
+            li {
+                width: 150px;
+                margin: 20px auto;
+                text-align: center;
+            }
+            a {
+                color: rgb(0, 0, 0);
+                font-size: 2.4rem;
+                font-weight: 500;
+            }
+        }
     }
 
+    &-menu.open {        
+        top: 0;
+        bottom: 0;
+        opacity: 1;
+    }
+    
     &-container {
         max-width: 1050px;
         margin: 0 auto;
-        position: relative;
     }
 }
 
@@ -26,19 +57,37 @@
     height: 30px;
     background: none;
     border: none;
+    color: black;
 
     .burger__icon-top {
         top: 5px;
-        @include burger_icon
+        @include burger_icon;
+        &.open {
+            transform: rotate(-45deg);
+            top: 13px;
+        }
     }
 
     .burger__icon-meddle {
         top: 13px;
-        @include burger_icon
+        @include burger_icon;
+        &.open {
+            opacity: 0;
+        }
     }
 
     .burger__icon-bottom {
         bottom: 5px;
-        @include burger_icon
+        @include burger_icon;
+        &.open {
+            transform: rotate(45deg);
+            bottom: 13px;
+        }
     }
+
+    &.open {
+        position: fixed;
+    }
+
 }
+
