--- a/src/sass/descktop/components/_header.scss
+++ b/src/sass/descktop/components/_header.scss
@@ -15,6 +15,7 @@
                 font-size: 1.8rem;
                 font-weight: 500;
                 color: black;
+                text-align: center;
             }
         }
     }
