--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -11,6 +11,10 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  position: relative;
+}
+
 main {
   padding: 40px 10px 0;
   max-width: 1050px;
@@ -49,13 +53,44 @@ img {
 }
 
 .header-menu {
-  display: none;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  position: fixed;
+  opacity: 0;
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.829);
+  top: -100vh;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+  -webkit-transition-property: top opacity bottom;
+  transition-property: top opacity bottom;
+}
+
+.header-menu ul li {
+  width: 150px;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.header-menu ul a {
+  color: black;
+  font-size: 2.4rem;
+  font-weight: 500;
+}
+
+.header-menu.open {
+  top: 0;
+  bottom: 0;
+  opacity: 1;
 }
 
 .header-container {
   max-width: 1050px;
   margin: 0 auto;
-  position: relative;
 }
 
 .burger {
@@ -65,33 +100,69 @@ img {
   height: 30px;
   background: none;
   border: none;
+  color: black;
 }
 
 .burger .burger__icon-top {
   top: 5px;
   position: absolute;
   width: 30px;
+  height: 4px;
   border-radius: 5px;
-  border: 2px solid black;
+  background-color: black;
   right: 1px;
+  -webkit-transition-property: opacity top bottom transform;
+  transition-property: opacity top bottom transform;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+}
+
+.burger .burger__icon-top.open {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  top: 13px;
 }
 
 .burger .burger__icon-meddle {
   top: 13px;
   position: absolute;
   width: 30px;
+  height: 4px;
   border-radius: 5px;
-  border: 2px solid black;
+  background-color: black;
   right: 1px;
+  -webkit-transition-property: opacity top bottom transform;
+  transition-property: opacity top bottom transform;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+}
+
+.burger .burger__icon-meddle.open {
+  opacity: 0;
 }
 
 .burger .burger__icon-bottom {
   bottom: 5px;
   position: absolute;
   width: 30px;
+  height: 4px;
   border-radius: 5px;
-  border: 2px solid black;
+  background-color: black;
   right: 1px;
+  -webkit-transition-property: opacity top bottom transform;
+  transition-property: opacity top bottom transform;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+}
+
+.burger .burger__icon-bottom.open {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  bottom: 13px;
+}
+
+.burger.open {
+  position: fixed;
 }
 
 .home {
