--- a/src/sass/descktop/components/_header.scss
+++ b/src/sass/descktop/components/_header.scss
@@ -7,10 +7,18 @@
 
     &-menu {
         display: initial;
+        position: static;
+        opacity: 1;
+        height: auto;
+        width: 700px;
         ul {
             width: 700px;
             display: flex;
             justify-content: space-around;
+            
+            li {
+                margin: 0;
+            }
             a {
                 font-size: 1.8rem;
                 font-weight: 500;
