--- a/src/sass/descktop/descktopStyle.css
+++ b/src/sass/descktop/descktopStyle.css
@@ -10,6 +10,10 @@
 
 .header-menu {
   display: initial;
+  position: static;
+  opacity: 1;
+  height: auto;
+  width: 700px;
 }
 
 .header-menu ul {
@@ -19,6 +23,10 @@
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+}
+
+.header-menu ul li {
+  margin: 0;
 }
 
 .header-menu ul a {
